--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description">
 <meta property="og:type" content="website">
-<meta property="og:title" content="焘焘爱斐斐">
+<meta property="og:title" content="Adam's">
 <meta property="og:url" content="http://yoursite.com/index.html">
 <meta property="og:site_name" content="Adam's">
 <meta property="og:description">
@@ -36,7 +36,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/" id="logo">焘焘爱斐斐</a>
+        <a href="/" id="logo">Adam's</a>
       </h1>
       
     </div>
